# proofyloops

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  proofyloops.py  pyproject.toml
lean-tools/: ProofpatchTools.lean  README.md  lake-manifest.json  lakefile.lean
lean-tools/.lake/config/[anonymous]/: lakefile.olean  lakefile.olean.trace
lean-tools/ProofpatchTools/: Tactics.lean
mcp-server/: Cargo.toml
mcp-server/examples/: stdio_smoke.rs
mcp-server/src/: main.rs
proofloops-core/: Cargo.toml
proofloops-core/src/: lib.rs  review.rs
proofloops-core/tests/: env_loading.rs
proofpatch-cli/: Cargo.toml
proofpatch-cli/src/: main.rs
proofpatch-core/: Cargo.toml  build.rs
proofpatch-core/research_papers/: bfsprover_2502.03438.html  leantree_2507.14722.html
proofpatch-core/src/: arxiv.rs  lib.rs  llm.rs  lsp_client.rs  planner.rs  review.rs  smt_lia.rs  tree_search.rs
proofpatch-core/tests/: env_loading.rs  patching.rs  research_ingest.rs  tree_search.rs
proofpatch-lean-embed/: Cargo.toml  README.md  build.rs  lean_shim.c
proofpatch-lean-embed/lean/: lake-manifest.json  lakefile.lean
proofpatch-lean-embed/lean/.lake/config/[anonymous]/: lakefile.olean  lakefile.olean.trace
proofpatch-lean-embed/lean/LeanEmbedDemo/: FFI.lean
proofpatch-lean-embed/src/: lib.rs
proofyloops-core/: Cargo.toml
proofyloops-core/src/: lib.rs  llm.rs  review.rs
proofyloops-core/tests/: env_loading.rs  patching.rs
scripts/: pp-lean-goal-dump-nearest  pp-lean-patch-nearest  pp-lean-tools-build  pp-lean-triage  pp-lean-verify
