[project]
name = "proofyloops"
version = "0.1.6"
description = "Local Lean proof repair loops (LLM router + suggestion/repair loop)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
]

[project.scripts]
proofyloops = "proofyloops:main"

[tool.setuptools]
py-modules = ["proofyloops"]

