 [package]
 name = "proofpatch-cli"
 version = "0.1.0"
 edition = "2021"
 publish = false
 
 description = "CLI wrapper for proofpatch-core (includes advanced orchestration commands)"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
 proofpatch-core = { path = "../proofpatch-core" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tempfile = "3.10"
 tokio = { version = "1", features = ["process", "time", "rt-multi-thread", "macros"] }
 similar = "2"
 schemars = { version = "1.2.0", features = ["derive"] }
smtkit = { git = "https://github.com/arclabs561/smtkit", rev = "e030ed1159293a74ac55a3cb592db6cb6c32d7b9" }
sha2 = "0.10"
 
 [features]
default = []
 lean-embed = ["proofpatch-core/lean-embed"]
 lsp = ["proofpatch-core/lsp"]
 planner = ["proofpatch-core/planner"]
 axi-agent = ["proofpatch-core/axi-agent"]
 
 [[bin]]
 name = "proofpatch"
 path = "src/main.rs"

