[package]
name = "proofpatch-lean-embed"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "Feature-gated Lean 4 runtime embedding for proofpatch (C ABI)."

[dependencies]
libc = "0.2"
once_cell = "1"

[build-dependencies]
cc = "1"

[features]
default = []
enabled = []

